礼包API修改